Added Tools & Frameworks section

--- a/index.html
+++ b/index.html
@@ -396,6 +396,69 @@
                     </div><!--//section-inner-->
                 </aside><!--//section-->
                 
+                <aside class="tools-frameworks aside section">
+                    <div class="section-inner">
+                        <h2 class="heading">Tools &amp; Frameworks</h2>
+                        <div class="content">
+                          <div class="row">
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://developer.android.com/studio/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/androidstudio.png" alt="Android Studio" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://developer.apple.com/xcode/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/xcode.png" alt="xCode" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://jenkins.io/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/jenkins.png" alt="Jenkins CI" />
+                            </a>
+                          </div>
+                          <div class="row">
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="http://appium.io/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/appium.png" alt="Appium" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://aws.amazon.com/device-farm/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/devicefarm.png" alt="AWS Device Farm" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://gradle.org/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/gradle.png" alt="Gradle" />
+                            </a>
+                          </div>
+                          <div class="row">
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://eclipse.org/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/eclipse.png" alt="eclipse" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://atom.io/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/atom.png" alt="Atom" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="http://reactivex.io/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/reactivex.png" alt="ReactiveX" />
+                            </a>
+                          </div>
+                          <div class="row">
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://cordova.apache.org/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/cordova.png" alt="Apache Cordova" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="http://phonegap.com/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/phonegap.png" alt="PhoneGap" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="http://angular.io/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/angular.png" alt="Angular 2" />
+                            </a>
+                          </div>
+                          <div class="row">
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://facebook.github.io/react-native/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/reactnative.png" alt="React Native" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://travis-ci.org/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/travisci.png" alt="Travis CI" />
+                            </a>
+                            <a class="col-md-4 col-sm-4 col-xs-4" href="https://www.docker.com/" target="_blank">
+                              <img class="img-responsive tools-frameworks-image" src="assets/images/tools/docker.png" alt="Docker" />
+                            </a>
+                          </div>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </aside><!--//section-->
+                
                 <aside class="list interests aside section">
                     <div class="section-inner">
                         <h2 class="heading">Interests</h2>
