Added a printable pdf version of the resume, previously generated by wkhtmltopdf tool

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
                     <li class="last-item"><a href="https://mabdurrahman.com/"><i class="fa fa-globe"></i></a></li>
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary pull-right" href="mailto:ma.abdurrahman@gmail.com" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            <div class="pull-right">
+              <a class="btn btn-cta-secondary non-printable" href="assets/print/MahmoudAbdurrahmanResume.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
+              <a class="btn btn-cta-primary" href="mailto:ma.abdurrahman@gmail.com" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
+            </div>
         </div><!--//container-->
     </header><!--//header-->
     
