Removed a duplicated paragraph, minor fix for custom domain https scheme, and minor change for readme

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li><a href="https://twitter.com/ma_abdurrahman" target="_blank"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://eg.linkedin.com/in/mabdurrahman" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/mabdurrahman" target="_blank"><i class="fa fa-github-alt"></i></a></li>
-                    <li class="last-item"><a href="https://mabdurrahman.com/"><i class="fa fa-globe"></i></a></li>
+                    <li class="last-item"><a href="http://mabdurrahman.com/"><i class="fa fa-globe"></i></a></li>
                 </ul> 
             </div><!--//profile-->
             <div class="pull-right">
@@ -121,7 +121,6 @@
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://www.messageone.com/products/alertfind/" target="_blank">MessageOne™ AlertFind® Mobile</a></h3>
                                     <p>AlertFind® is intended to facilitate critical communications to recipients by automating the sending of notifications via multiple communication channels defined in each recipient's profile.</p>
-                                    <p>AlertFind mobile app provides ability to register one's smart device as a communication channel to receive and respond to AlertFind notifications.</p>
                                     <p>AlertFind mobile app provides ability to register one's smart device as a communication channel to receive and respond to AlertFind notifications.</p>
                                     <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.messageone.alertfind" target="_blank"><i class="fa fa-android"></i> Android</a> | <a class="more-link" href="https://itunes.apple.com/us/app/messageone-alertfind/id1001968719" target="_blank"><i class="fa fa-apple"></i> iOS</a></p>
                                 </div><!--//desc-->                          
