Changed MessageOne company to Aurea, it's already acquire 3 months ago and Aurea is more popular to be a sister company for Crossover than MessageOne, fixed minor issue for animation for printmode

--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                         <h2 class="heading">Work Experience</h2>
                         <div class="content">
                             <div class="item">
-                                <h3 class="title">Mobile Application Developer - <span class="place"><a href="http://www.messageone.com/" target="_blank">MessageOne</a></span> <span class="year">(May 2015 - Present) [1 year, 8 months]</span> <a href="http://www.messageone.com/" target="_blank"><img class="company-logo" src="assets/images/companies/messageone.png" alt="MessageOne" /></a></h3>
-                                <p>Responsible for maintaining Android/iOS Mobile Applications for MessageOne.</p>
+                                <h3 class="title">Mobile Application Developer - <span class="place"><a href="http://www.aurea.com/" target="_blank">Aurea via Crossover</a></span> <span class="year">(May 2015 - Present) [1 year, 8 months]</span> <a href="http://www.aurea.com/" target="_blank"><img class="company-logo" src="assets/images/companies/aurea.png" alt="Aurea" /></a></h3>
+                                <p>Responsible for maintaining Android/iOS Mobile Applications for MessageOne (Recently acquired by Aurea).</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Android Application Freelance TL - <span class="place"><a href="http://www.startappz.com/" target="_blank">Startappz</a></span> <span class="year">(May 2015 - Oct 2016) [1 year, 5 months]</span> <a href="http://www.startappz.com/" target="_blank"><img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" /></a></h3>
