Added LinkedIn profile to side section

--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                                 <li><i class="fa fa-link"></i>Website: <a href="http://mabdurrahman.com">mabdurrahman.com</a></li>
                                 <li><i class="fa fa-phone"></i>Mobile: <a href="tel:+201227004454">+2(012) 270-04454</a></li>
                                 <li><i class="fa fa-skype"></i>Skype: <a href="skype:ma.abdurrahman?userinfo">ma.abdurrahman</a></li>
+                                <li><i class="fa fa-linkedin"></i>LinkedIn: <a href="https://eg.linkedin.com/in/mabdurrahman" target="_blank">mabdurrahman</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
