--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                         <div class="content">
 
                             <div class="item featured text-center">
-                                <h3 class="heading"><a href="http://virginmobile.sa/app" target="_blank">Virgin Self Care</a></h3>
-                                <p class="summary">The easiest way to manage Virgin Mobile Account</p>
+                                <h3 class="heading"><a href="https://www.virginmobile.ae/" target="_blank">Virgin Mobile UAE</a></h3>
+                                <p class="summary">It represents the next generation of telecom self-care mobile client for Virgin Mobile UAE, a large scale application consists of more than 100 screens.</p>
                                 <div class="featured-image">
-                                    <a href="http://virginmobile.sa/app" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="Virgin Self Care" />
+                                    <a href="https://www.virginmobile.ae/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="Virgin Mobile UAE" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">Featured</div>
@@ -97,45 +97,131 @@
                                     </div>
 
                                 <div class="desc text-left">
-                                    <p>Virgin Mobile is an app that lets the customers manage their Virgin SA Account where and when they want. Top-up, store, pay their bill, get bundles and way, way more.</p>
+                                    <p>Want to experience the future of mobile? It’s simple - download the Virgin Mobile App, choose your number, select your own plan and we’ll deliver your SIM right to your door – you’ll never need to visit a mobile store again.</p>
                                 </div><!--//desc-->
-                                <a class="btn btn-cta-secondary" href="http://www.startappz.com/projects/virgin" target="_blank"><i class="fa fa-external-link"></i> Find out more</a>
-                                <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.virginmobile.saudi" target="_blank"><i class="fa fa-android"></i> Android</a> | <a class="more-link" href="https://itunes.apple.com/us/app/virgin-mobile-fyrjn-mwbayl/id994126281" target="_blank"><i class="fa fa-apple"></i> iOS</a></p>
-                                <div class="screenshots-gallery non-printable" data-pattern="virgin-sa|jpg|16">
+                                <a class="btn btn-cta-secondary" href="https://www.virginmobile.ae/" target="_blank"><i class="fa fa-external-link"></i> Find out more</a>
+                                <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.virginmobile.uae" target="_blank"><i class="fa fa-android"></i> Android</a> | <a class="more-link" href="https://itunes.apple.com/us/app/virgin-mobile-uae/id1198503948" target="_blank"><i class="fa fa-apple"></i> iOS</a></p>
+                                <div class="screenshots-gallery non-printable" data-pattern="virgin-uae|jpg|15">
                                   <div class = "col-xs-4 col-sm-2 col-md-2">
                                     <a class="thumbnail" data-index="0">
-                                      <img src = "assets/images/thumbs/virgin-sa/virgin-sa0.jpg" />
+                                      <img src = "assets/images/thumbs/virgin-uae/virgin-uae0.jpg" />
                                     </a>
                                   </div>
                                   <div class = "col-xs-4 col-sm-2 col-md-2">
                                     <a class="thumbnail" data-index="2">
-                                      <img src = "assets/images/thumbs/virgin-sa/virgin-sa2.jpg" />
+                                      <img src = "assets/images/thumbs/virgin-uae/virgin-uae2.jpg" />
                                     </a>
                                   </div>
                                   <div class = "col-xs-4 col-sm-2 col-md-2">
                                     <a class="thumbnail" data-index="4">
-                                      <img src = "assets/images/thumbs/virgin-sa/virgin-sa4.jpg" />
+                                      <img src = "assets/images/thumbs/virgin-uae/virgin-uae4.jpg" />
                                     </a>
                                   </div>
                                   <div class = "col-xs-4 col-sm-2 col-md-2">
                                     <a class="thumbnail" data-index="6">
-                                      <img src = "assets/images/thumbs/virgin-sa/virgin-sa6.jpg" />
+                                      <img src = "assets/images/thumbs/virgin-uae/virgin-uae6.jpg" />
                                     </a>
                                   </div>
                                   <div class = "col-xs-4 col-sm-2 col-md-2">
-                                    <a class="thumbnail" data-index="11">
-                                      <img src = "assets/images/thumbs/virgin-sa/virgin-sa11.jpg" />
+                                    <a class="thumbnail" data-index="7">
+                                      <img src = "assets/images/thumbs/virgin-uae/virgin-uae7.jpg" />
                                     </a>
                                   </div>
                                   <div class = "col-xs-4 col-sm-2 col-md-2">
-                                    <a class="thumbnail" data-index="15">
-                                      <img src = "assets/images/thumbs/virgin-sa/virgin-sa15.jpg" />
+                                    <a class="thumbnail" data-index="13">
+                                      <img src = "assets/images/thumbs/virgin-uae/virgin-uae13.jpg" />
                                     </a>
                                   </div>
                                 </div>
                             </div><!--//item-->
 
                             <hr class="divider" />
+
+                            <div class="item row">
+                                <a class="col-sm-3 col-xs-12 project-icon" href="http://mabdurrahman.com/" target="_blank">
+                                  <img class="img-responsive project-image" src="assets/images/projects/rendy.png" alt="Rendy – Saudi" />
+                                </a>
+                                <div class="desc col-sm-9 col-xs-12">
+                                    <h3 class="title no-border"><a href="http://mabdurrahman.com/" target="_blank">Rendy – Saudi</a> <span class="label label-theme">Stay Tuned</span></h3>
+                                    <p>Find the best clinics in town, reserve an appointment with most professional physicians, and takecare of your health.</p>
+                                    <p>With Rendy, you can see doctors’ open appointment times and book instantly online, make informed choices with verified reviews, and stay on top of important check ups with tailored reminders.</p>
+                                    <div class="screenshots-gallery non-printable" data-pattern="rendy|png|8">
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="0">
+                                          <img src = "assets/images/thumbs/rendy/rendy0.png" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="2">
+                                          <img src = "assets/images/thumbs/rendy/rendy2.png" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="3">
+                                          <img src = "assets/images/thumbs/rendy/rendy3.png" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="4">
+                                          <img src = "assets/images/thumbs/rendy/rendy4.png" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="5">
+                                          <img src = "assets/images/thumbs/rendy/rendy5.png" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="7">
+                                          <img src = "assets/images/thumbs/rendy/rendy7.png" />
+                                        </a>
+                                      </div>
+                                    </div>
+                                </div><!--//desc-->
+                            </div><!--//item-->
+
+                            <div class="item row">
+                                <a class="col-sm-3 col-xs-12 project-icon" href="http://virginmobile.sa/app" target="_blank">
+                                  <img class="img-responsive project-image" src="assets/images/projects/virgin-sa.png" alt="Virgin Self Care" />
+                                </a>
+                                <div class="desc col-sm-9 col-xs-12">
+                                    <h3 class="title no-border"><a href="http://www.startappz.com/projects/virgin" target="_blank">Virgin Self Care</a></h3>
+                                    <p>Virgin Mobile is an app that lets the customers manage their Virgin SA Account where and when they want. Top-up, store, pay their bill, get bundles and way, way more.</p>
+                                    <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.virginmobile.saudi" target="_blank"><i class="fa fa-android"></i> Android</a> | <a class="more-link" href="https://itunes.apple.com/us/app/virgin-mobile-fyrjn-mwbayl/id994126281" target="_blank"><i class="fa fa-apple"></i> iOS</a></p>
+                                    <div class="screenshots-gallery non-printable" data-pattern="virgin-sa|jpg|16">
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="0">
+                                          <img src = "assets/images/thumbs/virgin-sa/virgin-sa0.jpg" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="2">
+                                          <img src = "assets/images/thumbs/virgin-sa/virgin-sa2.jpg" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="4">
+                                          <img src = "assets/images/thumbs/virgin-sa/virgin-sa4.jpg" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="6">
+                                          <img src = "assets/images/thumbs/virgin-sa/virgin-sa6.jpg" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="11">
+                                          <img src = "assets/images/thumbs/virgin-sa/virgin-sa11.jpg" />
+                                        </a>
+                                      </div>
+                                      <div class = "col-xs-3 col-sm-3 col-md-3">
+                                        <a class="thumbnail" data-index="15">
+                                          <img src = "assets/images/thumbs/virgin-sa/virgin-sa15.jpg" />
+                                        </a>
+                                      </div>
+                                    </div>
+                                </div><!--//desc-->
+                            </div><!--//item-->
 
                             <div class="item row">
                                 <a class="col-sm-3 col-xs-12 project-icon" href="http://startappz.com/projects/sabb-staff-app" target="_blank">
@@ -443,11 +529,26 @@
                             <div class="item">
                                 <h3 class="title">
                                   <span class="text-wrapper">
+                                    Mobile Technical Evaluator &amp; Architect -
+                                    <span class="place">
+                                      <a href="http://www.crossover.com/" target="_blank">Crossover</a>
+                                    </span>
+                                    <span class="year">(May 2017 - Present) [1 year, 8 months]</span>
+                                  </span>
+                                  <a class="icon-wrapper" href="http://www.crossover.com/" target="_blank">
+                                    <img class="company-logo" src="assets/images/companies/crossover.png" alt="Crossover" />
+                                  </a>
+                                </h3>
+                                <p>Responsible for Android/iOS pipelines quality: designing hands-on projects for their candidates, automating the hands-on grading process, creating Subject Matter tests, generating lots of reports to ensure the quality metrics, and finally, interviewing the shortlisted candidates for Marketplace endorsing.</p>
+                            </div><!--//item-->
+                            <div class="item">
+                                <h3 class="title">
+                                  <span class="text-wrapper">
                                     Mobile Application Developer -
                                     <span class="place">
                                       <a href="http://www.aurea.com/" target="_blank">Aurea via Crossover</a>
                                     </span>
-                                    <span class="year">(May 2015 - Present) [1 year, 8 months]</span>
+                                    <span class="year">(May 2015 - May 2017) [2 years]</span>
                                   </span>
                                   <a class="icon-wrapper" href="http://www.aurea.com/" target="_blank">
                                     <img class="company-logo" src="assets/images/companies/aurea.png" alt="Aurea" />
@@ -501,8 +602,8 @@
                         </div><!--//github-graph-->
 
                         <!--//Usage: http://caseyscarborough.com/projects/github-activity/ -->
-                        <div id="ghfeed" class="ghfeed">
-                        </div><!--//ghfeed-->
+                        <!--DISABLED:<div id="ghfeed" class="ghfeed">
+                        </div> --><!--//ghfeed-->
                     </div><!--//secton-inner-->
                 </section><!--//section-->
 
