Revisiting dead links

--- a/index.html
+++ b/index.html
@@ -357,13 +357,13 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-sm-3 col-xs-12 project-icon" href="http://www.anawtefli.com/" target="_blank">
+                                <a class="col-sm-3 col-xs-12 project-icon" href="https://apptopia.com/google-play/app/com.startappz.pregnancy/about" target="_blank">
                                   <img class="img-responsive project-image" src="assets/images/projects/anawtefli.png" alt="Ana W Tifli" />
                                 </a>
                                 <div class="desc col-sm-9 col-xs-12">
-                                    <h3 class="title"><a href="http://www.anawtefli.com/" target="_blank">Ana W Tifli</a></h3>
+                                    <h3 class="title">Ana W Tifli</h3>
                                     <p>Ana W Tifli helps pregnant women by beautifully giving them valuable information about their health, pregnancy and growth of the embryo during the pregnancy period.</p>
-                                    <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.startappz.pregnancy" target="_blank"><i class="fa fa-android"></i> Android</a></p>
+                                    <p><a class="more-link" href="https://apptopia.com/google-play/app/com.startappz.pregnancy/about" target="_blank"><i class="fa fa-android"></i> Android</a></p>
                                     <div class="screenshots-gallery non-printable" data-pattern="ana-w-tifli|jpg|8">
                                       <div class = "col-xs-3 col-sm-3 col-md-3">
                                         <a class="thumbnail" data-index="0">
@@ -390,14 +390,14 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-sm-3 col-xs-12 project-icon" href="http://www.nabdatheartrate.com/" target="_blank">
+                                <a class="col-sm-3 col-xs-12 project-icon" href="https://apptopia.com/google-play/app/com.startappz.nabadat/about" target="_blank">
                                   <img class="img-responsive project-image" src="assets/images/projects/nabdat.png" alt="Nabdat Heart Rate" />
                                 </a>
                                 <div class="desc col-sm-9 col-xs-12">
-                                    <h3 class="title"><a href="http://www.nabdatheartrate.com/" target="_blank">Nabdat Heart Rate</a></h3>
+                                    <h3 class="title">Nabdat Heart Rate</h3>
                                     <p>Nabdat app is one of the most accurate tools to measure the resting heart rate instantly, leveraging similar technique as used in pulse oximeters.</p>
                                     <p>It's helpful for people who are watching their resting heart rate for health reasons or for fitness and healthcare monitoring reasons.</p>
-                                    <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.startappz.nabadat" target="_blank"><i class="fa fa-android"></i> Android</a></p>
+                                    <p><a class="more-link" href="https://apptopia.com/google-play/app/com.startappz.nabadat/about" target="_blank"><i class="fa fa-android"></i> Android</a></p>
                                     <div class="screenshots-gallery non-printable" data-pattern="nabdat|jpg|5">
                                       <div class = "col-xs-3 col-sm-3 col-md-3">
                                         <a class="thumbnail" data-index="0">
@@ -424,13 +424,13 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-sm-3 col-xs-12 project-icon" href="http://magazine.hawaaworld.com/" target="_blank">
+                                <a class="col-sm-3 col-xs-12 project-icon" href="https://apptopia.com/google-play/app/com.startappz.hawaaworld/about" target="_blank">
                                   <img class="img-responsive project-image" src="assets/images/projects/hawaaworld.png" alt="HawaaWorld" />
                                 </a>
                                 <div class="desc col-sm-9 col-xs-12">
-                                    <h3 class="title"><a href="http://magazine.hawaaworld.com/" target="_blank">HawaaWorld</a></h3>
+                                    <h3 class="title">HawaaWorld</h3>
                                     <p>An interactive magazine that projects content from HawaaWorld with rich multimedia, giving the user a unique way of surfing through the content in an immersive and engaging experience.</p>
-                                    <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.startappz.hawaaworld" target="_blank"><i class="fa fa-android"></i> Android</a></p>
+                                    <p><a class="more-link" href="https://apptopia.com/google-play/app/com.startappz.hawaaworld/about" target="_blank"><i class="fa fa-android"></i> Android</a></p>
                                     <div class="screenshots-gallery non-printable" data-pattern="hawaa-world|jpg|15">
                                       <div class = "col-xs-3 col-sm-3 col-md-3">
                                         <a class="thumbnail" data-index="0">
@@ -457,13 +457,13 @@
                             </div><!--//item-->
 
                             <div class="item row">
-                                <a class="col-sm-3 col-xs-12 project-icon" href="http://magazine.zafafi.com/" target="_blank">
+                                <a class="col-sm-3 col-xs-12 project-icon" href="https://apptopia.com/google-play/app/com.startappz.zafafi/about" target="_blank">
                                   <img class="img-responsive project-image" src="assets/images/projects/zafafi.png" alt="Zafafi Android" />
                                 </a>
                                 <div class="desc col-sm-9 col-xs-12">
-                                    <h3 class="title"><a href="http://magazine.zafafi.com/" target="_blank">Zafafi Android</a></h3>
+                                    <h3 class="title">Zafafi Android</h3>
                                     <p>A beautiful and interactive magazine that gives the brides-to-be all their needs in the forms of rich articles, images and videos about wedding arrangements, wedding dresses, brides hair styles and make-up, amongst other things.</p>
-                                    <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.startappz.zafafi" target="_blank"><i class="fa fa-android"></i> Android</a></p>
+                                    <p><a class="more-link" href="https://apptopia.com/google-play/app/com.startappz.zafafi/about" target="_blank"><i class="fa fa-android"></i> Android</a></p>
                                     <div class="screenshots-gallery non-printable" data-pattern="zafafi|jpg|12">
                                       <div class = "col-xs-3 col-sm-3 col-md-3">
                                         <a class="thumbnail" data-index="2">
@@ -511,12 +511,12 @@
                                 <h3 class="title">Molped Diary Period Tracker</h3>
                                 <p class="summary">It offers all women to relieve of the burden of having to track their menstrual cycle. Whether they’re trying to get pregnant, synchronizing with birth control, or simply curious of how their bodily rhythm flows.</p>
                                 <div class="screenshots-gallery non-printable" data-pattern="molped-android|jpg|3,molped-ios|jpg|3"><a class="more-link"><i class="fa fa-picture-o"></i> Screenshots</a></div>
-                                <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.tabssoft.molped" target="_blank"><i class="fa fa-android"></i> Android</a> | <a class="more-link" href="https://itunes.apple.com/us/app/molped-diary-period-tracker/id986317726" target="_blank"><i class="fa fa-apple"></i> iOS</a></p>
+                                <p><a class="more-link" href="https://apptopia.com/google-play/app/com.tabssoft.molped/about" target="_blank"><i class="fa fa-android"></i> Android</a> | <a class="more-link" href="https://apptopia.com/ios/app/986317726/about" target="_blank"><i class="fa fa-apple"></i> iOS</a></p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">Euro Club Rescue Service</h3>
                                 <p class="summary">With single tap; the application detects the position of the customer and request assistance from the provider (Euro Club) from Android, BlackBerry, and J2ME based devices.</p>
-                                <p><a class="more-link" href="https://play.google.com/store/apps/details?id=com.euroclub.rescue" target="_blank"><i class="fa fa-android"></i> Android</a></p>
+                                <p><a class="more-link" href="https://apptopia.com/google-play/app/com.euroclub.rescue/about" target="_blank"><i class="fa fa-android"></i> Android</a></p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -529,7 +529,7 @@
                             <div class="item">
                                 <h3 class="title">
                                   <span class="text-wrapper">
-                                    Mobile Technical Evaluator &amp; Architect -
+                                    Android Software Architect -
                                     <span class="place">
                                       <a href="http://www.crossover.com/" target="_blank">Crossover</a>
                                     </span>
@@ -539,7 +539,7 @@
                                     <img class="company-logo" src="assets/images/companies/crossover.png" alt="Crossover" />
                                   </a>
                                 </h3>
-                                <p>Responsible for Android/iOS pipelines quality: designing hands-on projects for their candidates, automating the hands-on grading process, creating Subject Matter tests, generating lots of reports to ensure the quality metrics, and finally, interviewing the shortlisted candidates for Marketplace endorsing.</p>
+                                <p>Responsible for Android/iOS pipelines quality: designing hands-on projects for their candidates, automating the hands-on grading process, creating subject matter tests (MCQs), generating lots of reports to ensure the quality metrics, and finally, interviewing the shortlisted candidates for marketplace endorsing.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">
@@ -554,39 +554,64 @@
                                     <img class="company-logo" src="assets/images/companies/aurea.png" alt="Aurea" />
                                   </a>
                                 </h3>
-                                <p>Responsible for maintaining Android/iOS Mobile Applications for MessageOne (Recently acquired by Aurea).</p>
+                                <p>Responsible for maintaining both Android/iOS mobile applications for MessageOne (acquired by Aurea), increase their business code coverage, develop their UI automation tests using appium framework, setup their Jenkins CI environments, and integrate Jenkins CI jobs with AWS Device Farm service to ensure they are executed as part of the production release pipeline.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">
                                   <span class="text-wrapper">
-                                    Android Application Freelance TL - <span class="place"><a href="http://www.startappz.com/" target="_blank">Startappz</a></span> <span class="year">(May 2015 - Oct 2016) [1 year, 5 months]</span>
+                                    Android Application Freelance TL -
+                                    <span class="place">
+                                      <a href="http://www.startappz.com/" target="_blank">Startappz</a>
+                                    </span>
+                                    <span class="year">(May 2015 - Oct 2016) [1 year, 5 months]</span>
                                   </span>
-                                  <a class="icon-wrapper" href="http://www.startappz.com/" target="_blank"><img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" /></a></h3>
+                                  <a class="icon-wrapper" href="http://www.startappz.com/" target="_blank">
+                                    <img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" />
+                                  </a>
+                                </h3>
                                 <p>Leading Startappz Mobile Application Team on freelancing bases, responsible for Android applications architecture/developing.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">
                                   <span class="text-wrapper">
-                                    Android Application TL - <span class="place"><a href="http://www.startappz.com/" target="_blank">Startappz</a></span> <span class="year">(Oct 2013 - May 2015) [1 year, 7 months]</span>
+                                    Android Application TL - 
+                                    <span class="place">
+                                      <a href="http://www.startappz.com/" target="_blank">Startappz</a>
                                   </span>
-                                  <a class="icon-wrapper" href="http://www.startappz.com/" target="_blank"><img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" /></a></h3>
-                                <p>Leading Startappz Mobile Application Team, responsible for Android applications architecture/developing.</p>
+                                    <span class="year">(Oct 2013 - May 2015) [1 year, 7 months]</span>
+                                  </span>
+                                  <a class="icon-wrapper" href="http://www.startappz.com/" target="_blank">
+                                    <img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" />
+                                  </a>
+                                </h3>
+                                <p>I started as a senior Android developer and later I lead the Android team and was responsible for choosing the best technology stacks and setting up code conventions and team practices.</p>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">
                                   <span class="text-wrapper">
-                                    Sr. Android Application Developer - <span class="place"><a href="http://www.startappz.com/" target="_blank">Startappz</a></span> <span class="year">(2012 - 2013) [1 year, 1 month]</span>
+                                    Sr. Android Application Developer -
+                                    <span class="place">
+                                      <a href="http://www.startappz.com/" target="_blank">Startappz</a>
                                   </span>
-                                  <a class="icon-wrapper" href="http://www.startappz.com/" target="_blank"><img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" /></a></h3>
+                                    <span class="year">(2012 - 2013) [1 year, 1 month]</span>
+                                  </span>
+                                  <a class="icon-wrapper" href="http://www.startappz.com/" target="_blank">
+                                    <img class="company-logo" src="assets/images/companies/startappz.png" alt="Startappz" />
+                                  </a>
+                                </h3>
                             </div><!--//item-->
                             <div class="item">
                                 <h3 class="title">
                                   <span class="text-wrapper">
-                                    Mobile Application Developer - <span class="place">Telecomax Group</span> <span class="year">(2010 - 2012) [2 years, 9 months]</span>
+                                    Mobile Application Developer -
+                                    <span class="place">Telecomax Group</span>
+                                    <span class="year">(2010 - 2012) [2 years, 9 months]</span>
                                   </span>
                                   <a class="icon-wrapper">
-                                    <img class="company-logo" src="assets/images/companies/telecomax.png" alt="Telecomax Group" /></h3>
+                                    <img class="company-logo" src="assets/images/companies/telecomax.png" alt="Telecomax Group" />
                                   </a>
+                                </h3>
+                                <p>In Telecomax, I was hired primary as a Java developer for telecom VAS products but I then chosen as the main mobile developer using J2ME for old featured and Symbian based handheld devices, and then transferred to Android and iOS based smartphones and was responsible for setting up the new mobile development team.</p>
                             </div><!--//item-->
 
                         </div><!--//content-->
