Revisiting skills set

--- a/index.html
+++ b/index.html
@@ -662,7 +662,23 @@
                                 <div class="item">
                                     <h3 class="level-title">Android<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="It's my main focus...">Expert</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="95%">
+                                        <div class="level-bar-inner" data-level="100%">
+                                        </div>
+                                    </div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Java<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Main language for Android development...">Expert</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="100%">
+                                        </div>
+                                    </div><!--//level-bar-->
+                                </div><!--//item-->
+
+                                <div class="item">
+                                    <h3 class="level-title">Kotlin<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="New language for Android development...">Advanced</span></h3>
+                                    <div class="level-bar">
+                                        <div class="level-bar-inner" data-level="80%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
@@ -670,7 +686,7 @@
                                 <div class="item">
                                     <h3 class="level-title">iOS<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" title="Aside focus...">Intermediate</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="60%">
+                                        <div class="level-bar-inner" data-level="70%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
