--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </ul>
             </div><!--//profile-->
             <div class="pull-right header-buttons">
-              <a class="btn btn-cta-secondary non-printable" href="assets/print/MahmoudAbdurrahmanResume.pdf" target="_blank"><i class="fa fa-download"></i> Download</a>
+              <a class="btn btn-cta-secondary non-printable" href="assets/print/MahmoudAbdurrahmanResume.pdf" target="_blank"><i class="fa fa-download"></i> PDF Resume</a>
               <a class="btn btn-cta-primary" href="mailto:ma.abdurrahman@gmail.com" target="_blank"><i class="fa fa-paper-plane"></i> Contact Me</a>
             </div>
         </div><!--//container-->
