--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
     <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css"/>
 
     <!-- github calendar css -->
-    <link rel="stylesheet" href="assets/plugins/github-calendar/dist/github-calendar.css"/>
-
-    <!-- github acitivity css -->
-    <link rel="stylesheet" href="assets/plugins/github-activity/src/github-activity.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
 
     <!-- PhotoSwipe Core CSS file -->
     <link rel="stylesheet" href="assets/plugins/photoswipe/photoswipe.css"/>
@@ -1045,12 +1041,7 @@
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/plugins/jquery-rss/dist/jquery.rss.min.js"></script>
     <!-- github calendar plugin -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/3.0.2/es6-promise.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.10.1/fetch.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/github-calendar/dist/github-calendar.min.js"></script>
-    <!-- github activity plugin -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
-    <script type="text/javascript" src="assets/plugins/github-activity/src/github-activity.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
     <!-- PhotoSwipe Core JS file -->
     <script type="text/javascript" src="assets/plugins/photoswipe/photoswipe.min.js"></script>
     <!-- PhotoSwipe UI JS file -->
